--- a/报错.md
+++ b/报错.md
@@ -327,3 +327,113 @@ Stop.
 `stu` 定义在 `while` 循环里，**出了循环就销毁**，后面那句 `for (int i = 0; i < n; ++i) …` 已经不在 `while` 作用域内，编译器找不到 `stu`，于是报 `error C2065: “stu”: 未声明的标识符`。
 
 修正：把输出语句**挪进 while 内部**，紧跟排序后。
+
+### 2214 递归快速排序
+
+> 本次代码思路大部分使用AI帮助 需要仔细消化理解
+
+源代码
+
+```
+#include <iostream>
+#include <algorithm>
+#include <vector>
+
+//被调用的逻辑函数
+int partition(std::vector<int>& vec, int low, int high) {
+    int pivot = vec[high];  //选末位作为基准
+    int i = low - 1;        //i是小于基准位的最后一个元素
+
+    for(int j = low; j < high; j++){
+        if(vec[j] < pivot){
+            i++;
+            std::swap(vec[i],vec[j]);
+        }
+    }
+    std::swap(vec[high],vec[i+1]);
+    return i+1;
+}
+
+//分治法分类函数
+void Quick_Sort(std::vector<int>& vec, int low, int high) {
+    if(low < high){
+        int pi = partition(vec, low, high);
+        //调用自身进行递归 直到子数组大小为0或1
+        Quick_Sort(vec, low, pi - 1);
+        Quick_Sort(vec, pi + 1, high);
+    }
+}
+
+int main() {
+    int x;
+    std::vector<int> vec;
+    while (std::cin >> x && x != 0)
+        vec.push_back(x);
+
+    Quick_Sort(vec, 0, vec.size() - 1);
+
+    for(const int num : vec)
+        std::cout << num << " ";
+
+    std::cout << std::endl;
+    return 0;
+}
+//
+// Created by 62705 on 2025/10/7.
+//
+```
+
+问题点：
+
+- 将调用函数的代码段放在被调用函数的前面，导致编译器找不到调用函数
+- 使用    while (!(std::cin >> x))来传入数据 而忽视题干中的输入0时终止
+  - 解决：改用while (std::cin >> x && x != 0) 
+
+### 1714 直接插入排序
+
+源代码
+
+```
+#include <iostream>
+#include <vector>
+#include <algorithm>
+
+int main(){
+    int Num;
+    std::vector<int> vec;
+    std::cin >> Num;
+    if(Num <= 0)
+        return -1;
+    int x;
+    for(int i = 0; i < Num; i++){
+        std::cin >> x;
+        vec.push_back(x);
+    }
+
+    std::sort(vec.begin(), vec.end());
+
+    for(const int &i : vec)
+        std::cout << vec[i] << " ";
+    std::cout << std::endl;
+    return 0;
+}
+```
+
+在输出排序后的数组时，您使用了 `vec[i]` 而不是 `i`。在范围基 `for` 循环中，`i` 是数组中的当前元素，而不是索引
+
+若使用vec[i]，则相当于把当前vec[i]的值给vec 让vec去找这个下标vec[vec[i]]的值
+
+改为直接插入排序方法：
+
+    // 直接插入排序
+    for (int i = 1; i < n; ++i) {
+        int key = vec[i];
+        int j = i - 1;
+        
+        // 将 vec[i] 插入到已排序序列 vec[0...i-1] 中的正确位置
+        while (j >= 0 && vec[j] > key) {
+            vec[j + 1] = vec[j];
+            --j;
+        }
+        vec[j + 1] = key;
+    }
