--- a/报错.md
+++ b/报错.md
@@ -389,6 +389,51 @@ int main() {
 - 使用    while (!(std::cin >> x))来传入数据 而忽视题干中的输入0时终止
   - 解决：改用while (std::cin >> x && x != 0) 
 
+### 1716 非递归快速排序
+
+> 由递归快速排序修改得到，通过自己操纵栈来模拟递归在栈中的操作
+
+源代码
+
+```
+#include <iostream>
+#include <vector>
+
+//被调用的逻辑函数
+int partition(std::vector<int>& vec, int low, int high) {
+	//逻辑一样
+}
+
+void QuickSort(std::vector<int>& vec, int low, int high) {
+    std::vector<std::pair<int, int>> stack;
+    stack.emplace_back(low, high);
+
+    while(!stack.empty()){
+        auto [l, h] = stack.back();
+        stack.pop_back();
+
+        if(l < h){
+            int pi = partition(vec, l, h);
+
+            //先压大再压小
+            if(pi + 1 < h)
+                stack.emplace_back(pi + 1, h);
+            if(l < pi - 1)
+                stack.emplace_back(l, pi - 1);
+        }
+    }
+}
+
+int main() {、
+	//逻辑yi
+}
+//
+// Created by 62705 on 2025/10/9.
+//
+```
+
+
+
 ### 1714 直接插入排序
 
 源代码
@@ -437,3 +482,96 @@ int main(){
         }
         vec[j + 1] = key;
     }
+
+### 1717 简单选择排序
+
+源代码
+
+```
+#include <iostream>
+#include <vector>
+
+int Select_Min_Key(std::vector<int>& vec,int i) {
+    int Key = vec[i];
+    for (int & j : vec) {
+        if (Key > j)
+            Key = j;
+    }
+    return Key;
+}
+
+void Select_Sort(std::vector<int>& vec) {
+    for (int i = 1; i < vec.size(); ++i) {
+        int j = Select_Min_Key(vec, i);
+        if (i != j)
+            std::swap(vec[i], vec[j]);
+    }
+}
+
+int main() {
+    int Num;
+    std::cin >> Num;
+    if(Num <= 0)
+        return -1;
+    int x;
+    std::vector<int> vec;
+    for(int i = 0; i < Num; i++){
+        std::cin >> x;
+        vec.push_back(x);
+    }
+
+    Select_Sort(vec);
+
+    for(const int num : vec)
+        std::cout << num << " ";
+
+    std::cout << std::endl;
+    return 0;
+}
+
+//
+// Created by 62705 on 2025/10/10.
+//
+```
+
+#### ❌ 问题 1：Select_Min_Key 根本没从 i 开始找
+
+```cpp
+for (int & j : vec)   // 遍历整个 vector，而不是 [i, end)
+```
+
+导致每次返回的都是**整个数组的最小值**，而不是**未排序段的最小值**。
+
+------
+
+#### ❌ 问题 2：Select_Min_Key 返回的是“值”，却当成“下标”用
+
+```cpp
+int j = Select_Min_Key(vec, i);  // j 是最小值
+if (i != j)                      // 拿值当下标，逻辑错乱
+```
+
+#### ✅ 修正方案（最小改动）
+
+把 `Select_Min_Key` 改成**返回最小元素的下标**，并且只扫 `[i, end)`：
+
+```cpp
+int Select_Min_Key(std::vector<int>& vec, int i) {
+    int min_idx = i;
+    for (int j = i + 1; j < vec.size(); ++j)
+        if (vec[j] < vec[min_idx])
+            min_idx = j;
+    return min_idx;   // 返回下标
+}
+```
+
+然后排序函数里用下标交换：
+
+```cpp
+void Select_Sort(std::vector<int>& vec) {
+    for (int i = 0; i < vec.size(); ++i) {   // 从 0 开始
+        int j = Select_Min_Key(vec, i);
+        if (i != j) std::swap(vec[i], vec[j]);
+    }
+}
+```
