--- a/报错.md
+++ b/报错.md
@@ -575,3 +575,32 @@ void Select_Sort(std::vector<int>& vec) {
     }
 }
 ```
+
+### 0001 两数之和
+#### 源代码
+```cpp
+class Solution {
+public:
+    vector<int> twoSum(vector<int>& nums, int target) {
+        unordered_map<int,int>map;
+
+        for(int i = 0; i < nums.size(); i++){
+            int complement = target - nums[i];
+            if(map.find(complement) != map.end()){
+                return {map[complement], i};
+            }
+            map[nums[i]] = i;
+        }
+        return {};
+    }
+};
+```
+#### 问题
+1. if (map.find(complement) != map.end())是什么
+    - map.find(complement)：在哈希表里查 complement 这个键
+    - 如果找到了 → 返回指向该键值对的迭代器
+    - 如果没找到 → 返回 map.end()（一个特殊标记，表示"末尾之后"）
+2. map[nums[i]] = i; 是什么
+    - map 就是记录"我之前见过什么数，它们在哪"
+    - 第一次计算时，因为没见过补数，所以不会返回结果，但会把第一个数记录，当计算补数时就会发现第一个数可用
+    - 先查后存可以防止将一个数返回两次[n,n] (target = 2n时可能）
